--- a/.classpath
+++ b/.classpath
@@ -197,5 +197,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/AmogelangManyaka/.katalon/packages/Katalon_Studio_Free_Windows_64-9.5.0/Katalon_Studio_Free_Windows_64-9.5.0/configuration/org.eclipse.osgi/28/0/.cp/resources/basic-report/katalon-studio-report-plugin.jar"/>
 	<classpathentry kind="con" path="GROOVY_SUPPORT"/>
+	<classpathentry kind="con" path="GROOVY_DSL_SUPPORT"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
